--- a/awwards/templates/index.html
+++ b/awwards/templates/index.html
@@ -1,1 +1,56 @@
-<h1>Welcome to IPS Awwards</h1>
+{%extends 'base.html'%}
+{% load static %}
+{% block content %}
+{{block.super}}
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+<div class="jumbotron"
+    style="background-image:url('https://res.cloudinary.com/zilfa/image/upload/v1610894826/octavian-dan-b21Ty33CqVs-unsplash_ht78fg.jpg');background-size: cover; height: 100vh; background-position: center;margin-top: -2.86cm;">
+<div style="color:rgb(92, 3, 92);text-shadow: 5px 2px  #ffbb00; font-size: 40px;margin-top: 2%;font-family: 'Josefin Sans', sans-serif;margin-top: 3%;margin-left: 10px;">
+<span>Post</span>
+<br>
+<br>
+<ul><ul><span>Rate</span></ul></ul>
+<br>
+<ul><ul><ul><ul><span>Review</span></ul></ul></ul></ul>
+</div>
+</div>
+<div style="margin-top: -0.83cm;">
+    <div class="container" style="padding-top: 3%;">
+
+        <div class="row">
+            {% for pro in all_projects %}
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <a href="{% url 'oneproject' pro.id %}">
+                        <img src="{{pro.project_image.url}}" width="100%">
+                    </a>
+
+                    <div class="card-body">
+
+                        <p> <span
+                            style="font-weight: bold; font-size: 15px;color: rgba(0, 0, 0, 0.658);font-family: 'Times New Roman', Times, serif;margin-top: -0.3cm;">
+                            {{pro.title}}</span>
+                            <span style="float:right"><a href="{{pro.link}}"><small><i class="fas fa-share fa-lg"></i></small></a></span>
+                        </p>
+                        <hr style="width: 345px;margin-left: -0.50cm;margin-top: -0.30cm;">
+                        <div class="foot" style="margin-top: -0.30cm;margin-bottom: -0.40cm;">
+                            <span><a href="{% url 'oneproject' pro.id %}"><small>See more</small></a></span>
+                            <span style="margin-left: 150px;color: rgba(0, 0, 0, 0.534);"> <small>{{pro.date|date:"F d,Y"}}</small> </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+
+
+{% endblock %}
+
+<!--End of the block content-->
+{% block scripts %}
+{{block.super}}
+<script type="text/javascript" src="{%static 'js/newsletter.js'%}">
+</script>
+{% endblock %}
