modified project file

--- a/awwards/templates/project.html
+++ b/awwards/templates/project.html
@@ -46,22 +46,22 @@
 
         <div class="col-md-2"></div>
         <div class="col-md-3">
-          <a class="btn btn-success btn-sm" style="margin-left: 20px;font-weight: bold;color: purple;height: 55px;">
-            <span>Design</span>
-            <h5>{{design}}.0</h5>
+          <a class="btn btn-outline-secondary btn-sm" style="margin-left: 16px;font-weight: bold;height: 55px;">
+            <span style="font-size: 18px;">Design</span>
+            <p>{{design}}.0</p>
           </a>
         </div>
         <div class="col-md-3">
-          <a class="btn btn-warning btn-sm" style="margin-left: 20px;font-weight: bold;color: green;height: 55px;">
-            <span>Content</span>
-            <h5>{{content}}.0</h5>
+          <a class="btn btn-outline-secondary btn-sm" style="margin-left: 16px;font-weight: bold;height: 55px;">
+            <span style="font-size: 18px;">Content</span>
+            <p>{{content}}.0</p>
           </a>
         </div><br>
         <div class="col-md-3">
-          <a class="btn btn-sm"
-            style="margin-left: 20px; font-weight: bold;background-color: purple;color: yellow;height: 55px;">
-            <span>Usability</span>
-            <h5>{{usability}}.0</h5>
+          <a class="btn btn-outline-secondary btn-sm"
+            style="margin-left: 16px; font-weight: bold;height: 55px;">
+            <span style="font-size: 18px;">Usability</span>
+            <p>{{usability}}.0</p>
           </a>
         </div><br>
 
