--- a/awwards/templates/profile.html
+++ b/awwards/templates/profile.html
@@ -13,8 +13,8 @@
             <div class="col-md-6 mt-3">
                 <div class="media-body">
                     <span class="mr-5"><strong>{{my_profile.user}}</strong></span>
-                    <span class="mr-5"><a href="{%url 'edit'%}" class="btn btn-outline-info btn-sm"
-                            style="margin-left: 70px;">Edit Profile</a></span>
+                    <span class="mr-5"><a href="{%url 'edit'%}" class="btn  btn-sm"
+                            style="margin-left: 70px;background-color: purple;color: yellow;">Edit Profile</a></span>
                     <br>
                     <br>
                     <p> __<i>{{my_profile.bio}}</i></p>
@@ -27,7 +27,7 @@
 </div>
 
 <div class="container">
-    <h1 class="text-center" style="color: grey;font-family: 'Times New Roman', Times, serif;">Posted Project</h1>
+    <h1 class="text-center" style="color: grey;font-family: 'Times New Roman', Times, serif;">Available Projects</h1>
     <br>
     
     <div class="row">
