--- a/awwards/templates/project.html
+++ b/awwards/templates/project.html
@@ -46,20 +46,20 @@
 
         <div class="col-md-2"></div>
         <div class="col-md-3">
-          <a class="btn btn-outline-secondary btn-sm" style="margin-left: 16px;font-weight: bold;height: 55px;">
+          <a class="btn btn-outline-success btn-sm" style="margin-left: 16px;border-radius: 8px;font-weight: bold;height: 55px;">
             <span style="font-size: 18px;">Design</span>
             <p>{{design}}.0</p>
           </a>
         </div>
         <div class="col-md-3">
-          <a class="btn btn-outline-secondary btn-sm" style="margin-left: 16px;font-weight: bold;height: 55px;">
+          <a class="btn btn-outline-secondary btn-sm" style="margin-left: 16px;border-radius: 8px;font-weight: bold;height: 55px;">
             <span style="font-size: 18px;">Content</span>
             <p>{{content}}.0</p>
           </a>
         </div><br>
         <div class="col-md-3">
-          <a class="btn btn-outline-secondary btn-sm"
-            style="margin-left: 16px; font-weight: bold;height: 55px;">
+          <a class="btn btn-outline-primary btn-sm"
+            style="margin-left: 16px; font-weight: bold;border-radius: 8px;height: 55px;">
             <span style="font-size: 18px;">Usability</span>
             <p>{{usability}}.0</p>
           </a>
