--- a/awwards/templates/index.html
+++ b/awwards/templates/index.html
@@ -34,9 +34,9 @@
                             <span style="float:right"><a href="{{pro.link}}"><small><i class="fas fa-share fa-lg"></i></small></a></span>
                         </p>
                         <hr style="width: 345px;margin-left: -0.50cm;margin-top: -0.30cm;">
-                        <div class="foot" style="margin-top: -0.30cm;margin-bottom: -0.40cm;">
+                        <div class="foot" style="margin-top: -0.30cm;">
                             <span><a href="{% url 'oneproject' pro.id %}"><small>See more</small></a></span>
-                            <span style="margin-left: 150px;color: rgba(0, 0, 0, 0.534);"> <small>{{pro.date|date:"F d,Y"}}</small> </span>
+                            <span style="float:right;color: rgba(0, 0, 0, 0.534);"> <small>{{pro.date|date:"F d,Y"}}</small> </span>
                         </div>
                     </div>
                 </div>
