--- a/awwards/templates/project.html
+++ b/awwards/templates/project.html
@@ -46,21 +46,21 @@
 
         <div class="col-md-2"></div>
         <div class="col-md-3">
-          <a class="btn btn-outline-success btn-sm" style="margin-left: 16px;border-radius: 8px;font-weight: bold;height: 55px;">
-            <span style="font-size: 18px;">Design</span>
+          <a class="btn btn-outline-default btn-sm" style="margin-left: 16px;border-radius: 8px;font-weight: bold;height: 55px;">
+            <span style="font-size: 18px;color: green;">Design</span>
             <p>{{design}}.0</p>
           </a>
         </div>
         <div class="col-md-3">
-          <a class="btn btn-outline-secondary btn-sm" style="margin-left: 16px;border-radius: 8px;font-weight: bold;height: 55px;">
-            <span style="font-size: 18px;">Content</span>
+          <a class="btn btn-outline-default btn-sm" style="margin-left: 16px;border-radius: 8px;font-weight: bold;height: 55px;">
+            <span style="font-size: 18px;color: purple;">Content</span>
             <p>{{content}}.0</p>
           </a>
         </div><br>
         <div class="col-md-3">
-          <a class="btn btn-outline-primary btn-sm"
+          <a class="btn btn-outline-default btn-sm"
             style="margin-left: 16px; font-weight: bold;border-radius: 8px;height: 55px;">
-            <span style="font-size: 18px;">Usability</span>
+            <span style="font-size: 18px;color: blue;">Usability</span>
             <p>{{usability}}.0</p>
           </a>
         </div><br>
@@ -118,7 +118,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header text-center">
-              <h4 class="modal-title w-100 font-weight-bold" id="vote">Rate This Project</h4>
+              <h4 class="modal-title w-100 font-weight-bold" id="vote" style="color: grey;">Rate This Project</h4>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
