--- a/awwards/templates/project.html
+++ b/awwards/templates/project.html
@@ -53,14 +53,14 @@
         </div>
         <div class="col-md-3">
           <a class="btn btn-outline-default btn-sm" style="margin-left: 16px;border-radius: 8px;font-weight: bold;height: 55px;">
-            <span style="font-size: 18px;color: purple;">Content</span>
+            <span style="font-size: 18px;color: blue;">Content</span>
             <p>{{content}}.0</p>
           </a>
         </div><br>
         <div class="col-md-3">
           <a class="btn btn-outline-default btn-sm"
             style="margin-left: 16px; font-weight: bold;border-radius: 8px;height: 55px;">
-            <span style="font-size: 18px;color: blue;">Usability</span>
+            <span style="font-size: 18px;color: rgb(161, 4, 161);">Usability</span>
             <p>{{usability}}.0</p>
           </a>
         </div><br>
@@ -104,7 +104,6 @@
 
           {%else%}
 
-          <!-- <h5 class="text-center" style="color: grey;"><small><strong>This Project Is Not Yet Rated</strong></small></h5> -->
           {%endif%}
 
           
