--- a/awwards/templates/navbar.html
+++ b/awwards/templates/navbar.html
@@ -3,13 +3,13 @@
     <div class="container-fluid">
 
         <div>
-            <a class="navbar-brand" href="{%url 'index'%}" style="color:purple ;text-shadow: 3px 2px #eea60a;font-family: 'Kaushan Script', cursive;font-size:18px;font-weight: bold;"><i class="fas fa-award fa-lg"></i><span>WARDS</span>
+            <a class="navbar-brand" href="{%url 'index'%}" style="font-family: 'Kaushan Script', cursive;font-weight: bold;color: rgb(151, 10, 151);"><i class="fas fa-award fa-lg"></i><span style="font-size:15px;color: rgb(151, 10, 151);">WARD</span>
             </a>
         </div>
 
         <div class="dropdown">
             <a class="btn btn-default dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-top: 4%;font-weight: bold;font-family: 'Times New Roman', Times, serif;">
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-top: 4%;font-weight: bold;font-family: 'Times New Roman', Times, serif;color: rgb(105, 102, 102);">
                 API
             </a>
 
@@ -33,7 +33,7 @@
                 <ul class="dropdown">
                     <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button"
                         aria-expanded="false"
-                        style="font-family: 'Times New Roman', Times, serif;font-weight: bold;margin-right: 50px;">{{user.username}}
+                        style="font-family: 'Times New Roman', Times, serif;font-weight: bold;margin-right: 50px;color: rgb(92, 88, 88);">{{user.username}}
                     </a>
                     <ul class="dropdown-menu" role="menu" style="font-family: 'Times New Roman', Times, serif;">
                         <li>
@@ -54,7 +54,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{%url 'upload'%}" style="margin-top:-0.10cm;"><span
                             class="btn btn-warning btn-sm"
-                            style="font-size: 15px;color: purple;font-family: 'Times New Roman', Times, serif;font-weight: bold;">Post-Free</span></a>
+                            style="font-size: 15px;color: rgb(151, 12, 151);font-family: 'Times New Roman', Times, serif;font-weight: bold;">Post-Free</span></a>
                 </li>
                 
 
