--- a/awwards/templates/search.html
+++ b/awwards/templates/search.html
@@ -8,7 +8,7 @@
       {% if project %}
       
 
-      <h5 class="text-center">Found {{ project|length }} project {{ users | pluralize }} named <strong>{{message}}</strong></h2>
+      <h5 class="text-center">Found {{ project|length }} project {{ users | pluralize }} named <strong style="color: rgb(151, 10, 151);;">{{message}}</strong></h2>
         {% else %}
 
         <h5 class="text-center"> Found 0 project with name <strong>{{message}}</strong></h5>
