--- a/awwards/templates/profile.html
+++ b/awwards/templates/profile.html
@@ -14,7 +14,7 @@
                 <div class="media-body">
                     <span class="mr-5"><strong>{{my_profile.user}}</strong></span>
                     <span class="mr-5"><a href="{%url 'edit'%}" class="btn  btn-sm"
-                            style="margin-left: 70px;background-color: purple;color: yellow;">Edit Profile</a></span>
+                            style="margin-left: 70px;background-color: purple;color: white;">Edit Profile</a></span>
                     <br>
                     <br>
                     <p> __<i>{{my_profile.bio}}</i></p>
