--- a/awwards/templates/search.html
+++ b/awwards/templates/search.html
@@ -11,14 +11,14 @@
       <h5 class="text-center">Found {{ project|length }} project {{ users | pluralize }} named <strong style="color: rgb(151, 10, 151);;">{{message}}</strong></h2>
         {% else %}
 
-        <h5 class="text-center"> Found 0 project with name <strong>{{message}}</strong></h5>
-
+        <h5 class="text-center"> Found {{ project|length }} project named <strong>{{message}}</strong></h5>
+<hr>
 
         <a class="d-block mx-auto" href="/">
-          <button class="btn btn-sm btn-info d-block mx-auto">Back Home</button>
+          <button class="btn btn-sm  d-block mx-auto" style="background-color: purple;color: white;">Back Home</button>
         </a>
         {% endif %}
-        <hr>
+      
 
         {% if project %}
         {% for userpro in project %}
